# UFC-Almanac

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-event-predictions.yml  update-fight-data.yml  update-fighter-data.yml
artifacts/core/: transformer_model_normalization.pt
data/: FightResults.csv  FightStats.csv
scripts/: predict.py  predict_next_event.py  scrape_fighters.py  scrape_fights.py  train.py
ufc_almanac/: exceptions.py  globals.py  helpers.py
ufc_almanac/data/: __init__.py  data_handler.py  utils.py
ufc_almanac/inference/: __init__.py  predict.py  utils.py
ufc_almanac/models/: transformer.py
ufc_almanac/scraping/: __init__.py  fighters.py  fights.py  next_event.py  utils.py
ufc_almanac/training/: dataset.py  train.py  utils.py
